- Compatible with zeit.cms 0.9.16

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+1.1 (2008-05-29)
+----------------
+
+- Compatible with zeit.cms 0.9.16
+
+
 1.0 (2008-05-26)
 ----------------
 
