--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+1.3 (unreleased)
+----------------
+
 1.2 (2008-06-16)
 ----------------
 
