--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+1.4 (unreleased)
+----------------
+
 1.3 (2008-06-23)
 ----------------
 
