--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+1.6 (unreleased)
+----------------
+
 1.5 (2008-07-29)
 ----------------
 
