--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,10 @@
 zeit.content.article changes
 ============================
 
-1.6 (unreleased)
-----------------
+1.5.1 (2008-08-12)
+------------------
+
+- Aktualisiert für zeit.cms 1.1.5
 
 1.5 (2008-07-29)
 ----------------
