--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ zeit.content.article changes
 1.5.3 (unreleased)
 ------------------
 
+- Tests nochmal repariert.
+
 1.5.2 (2008-08-26)
 ------------------
 
