--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+1.5.4 (unreleased)
+------------------
+
 1.5.3 (2008-08-26)
 ------------------
 
