--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ zeit.content.article changes
 1.5.4 (unreleased)
 ------------------
 
+- Anpassungen an zeit.cms 1.2
+
 1.5.3 (2008-08-26)
 ------------------
 
