--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 zeit.content.article changes
 ============================
 
+1.5.5 (unreleased)
+------------------
+
+
 1.5.4 (2008-10-01)
 ------------------
 
