--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,10 @@
 zeit.content.article changes
 ============================
 
-1.5.5 (unreleased)
+1.5.5 (2008-10-01)
 ------------------
 
+- Article ist ein redaktioneller Inhalt.
 
 1.5.4 (2008-10-01)
 ------------------
