--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+1.5.6 (unreleased)
+------------------
+
 1.5.5 (2008-10-01)
 ------------------
 
