--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ zeit.content.article changes
 1.5.6 (unreleased)
 ------------------
 
+- Tests sind jetzt unabhängig vom Standardwert des Copyrights bei Bildern.
+
 1.5.5 (2008-10-01)
 ------------------
 
