--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 zeit.content.article changes
 ============================
 
+1.5.7 (unreleased)
+------------------
+
+- Bearbeiten von Rezensionen klarer gemacht (bug #4437).
+
 1.5.6 (2008-10-13)
 ------------------
 
