--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ zeit.content.article changes
 ------------------
 
 - Bearbeiten von Rezensionen klarer gemacht (bug #4437).
+- Anpassungen für zeit.cms 1.2.4
 
 1.5.6 (2008-10-13)
 ------------------
