--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+1.5.9 (unreleased)
+------------------
+
 1.5.8 (unreleased)
 ------------------
 
