--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ zeit.content.article changes
 1.5.9 (unreleased)
 ------------------
 
+- Anpassungen für zeit.cms 1.3
+
 1.5.8 (unreleased)
 ------------------
 
