--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,11 @@
 zeit.content.article changes
 ============================
 
-1.5.10 (unreleased)
+1.5.10 (2008-11-20)
 -------------------
+
+- Kein Test-Extra
+- Extra SecurityPolicy
 
 1.5.9 (2008-11-17)
 ------------------
