--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+1.5.11 (unreleased)
+-------------------
+
 1.5.10 (2008-11-20)
 -------------------
 
