tagesnl prepare release

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 zeit.content.article changes
 ============================
 
+1.5.12 (2009-02-09)
+-------------------
+
+- TagesNL per default an.
+
 1.5.11 (2008-12-12)
 -------------------
 
