- Tests für ``urn:uuid:...`` Format angepasst.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 zeit.content.article changes
 ============================
 
+1.6.1 (2009-04-17)
+------------------
+
+- Tests für ``urn:uuid:...`` Format angepasst.
+
 1.6 (2009-04-17)
 ----------------
 
