--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,15 @@
 zeit.content.article changes
 ============================
 
+1.7 (unreleased)
+----------------
+
+- Content-Drehscheibe: Kommt ein veränderter Artikel mit der selben UUID noch
+  mal aus der CDS, wird er im CMS überschrieben, wenn er noch nicht verändert
+  wurde.
+
+- Import-Pfade für die CDS sind konfigurierbar.
+
 1.6.2 (2009-04-22)
 ------------------
 
