--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 zeit.content.article changes
 ============================
 
+1.7.3 (2009-05-15)
+------------------
+
+- Anpassungen für zeit.cms 1.20
+
+- Alle ``test.py`` nach ``tests.py`` umbenannt.
+
+
 1.7.2 (2009-05-07)
 ------------------
 
