--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 zeit.content.article changes
 ============================
 
+
+1.7.7 (2009-05-20)
+------------------
+
+- Aus der CDS importierte Artikel werden beim Veröffentlichen nicht mehr in die
+  CDS exportiert.
+
 1.7.6 (2009-05-18)
 ------------------
 
