--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 zeit.content.article changes
 ============================
 
+2.1 (unreleased)
+----------------
+
+- Ein Artikel kann eine CenterPage als sein Layout referenzieren (#5491).
+
 2.0 (2009-06-08)
 ----------------
 
