--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Ein Artikel kann eine CenterPage als sein Layout referenzieren (#5491).
 
+- Tests für Hashed-Resources angepasst.
+
 2.0 (2009-06-08)
 ----------------
 
