--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 zeit.content.article changes
 ============================
 
+2.3 (unreleased)
+----------------
+
 2.2 (2009-07-23)
 ----------------
 
