--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ zeit.content.article changes
 - »RemainingFields« benutzten, damit Erweiterungen an den Standardmetadaten
   korrekt angezeigt werden.
 
+- Sicherstellen, dass Seitenumgbrüche nicht »None« als Teaser haben.
+
 2.2 (2009-07-23)
 ----------------
 
