--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,15 @@
 zeit.content.article changes
 ============================
 
+2.5 (unreleased)
+----------------
+
+- Templates für Artikel gibt es nicht mehr.
+
 2.4 (2009-08-11)
 ----------------
 
 - Banner-Feld entfernt (nach zeit.cms gewandert, #5931)
-
 
 2.3 (2009-08-03)
 ----------------
