--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 2.7 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Tests für Änderungen an zeit.cms angepasst.
 
 
 2.6 (2009-08-26)
