--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+2.7 (unreleased)
+----------------
+
+- Nothing changed yet.
+
+
 2.6.1 (2009-09-05)
 ------------------
 
