--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ zeit.content.article changes
 2.7 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Es wird nur noch genau der veröffentlichte Artikel in die CDS exportiert und
+  keine Artikel mehr, die durch Workflowabhängigkeiten veröffentlicht wurden.
 
 
 2.6.1 (2009-09-05)
