--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+2.7.3 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.7.2 (2009-09-21)
 ------------------
 
