--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 2.7.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- NoAutomaticMetadataUpdate entfernt.
 
 
 2.7.2 (2009-09-21)
