--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,7 @@ zeit.content.article changes
 ------------------
 
 - NoAutomaticMetadataUpdate entfernt.
+- Absätze werden wieder korrekt gezählt (#6197).
 
 
 2.7.2 (2009-09-21)
