Back to development: 2.8.1

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+2.8.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.8.0 (2009-12-18)
 ------------------
 
