Using ZTK versions and updated tests accordingly (re #6961)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 2.8.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Using versions from the ZTK.
 
 
 2.8.1 (2010-03-10)
