--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+2.8.3 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.8.2 (2010-04-13)
 ------------------
 
