--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 2.8.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Changed form layout, author information now in the left column (for #7333).
 
 
 2.8.3 (2010-06-02)
