--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+2.9.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.9.0 (2010-06-09)
 ------------------
 
