--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Require at least three keywords, not just one.
 
 
 3.0.4 (2013-07-08)
