--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.0.7 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.0.6 (2013-07-11)
 ------------------
 
