--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.0.8 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.0.7 (2013-08-14)
 ------------------
 
