Fixes #12558: Handle inserting links across tags
If you have "<p> [foo <b>bar baz] qux</b>" (where [] marks the selection),
executing ``createLink`` yields
"<p> [<a href="">foo </a><b><a href="">bar baz</a>] qux</b>"
i.e. *two* a-Tags to handle crossing the b-Tag.

This means our insert_link methods need to be able to deal with
multiple a-Tags, not just a single one.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ zeit.content.article changes
 
 - Display ``breadcrumb_title`` field (VIV-105).
 
+- Handle inserting links across tags (#12558).
+
 - Display proper name for "last published by" status.
 
 
