--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.0.10 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix styling of rel="nofollow" checkbox on Mac (VIV-104).
 
 
 3.0.9 (2013-09-24)
