Back to development: 3.0.11

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.0.11 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.0.10 (2013-10-01)
 -------------------
 
