Re #11611: Explicitly request xpath to account for lxml-3.x
In 3.x, the find-methods use ElementPath instead of XPath which, while
faster, does not allow composite conditions.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Make use of webdriver (#12573).
 
+- Update to lxml-3.x (#11611).
+
 
 3.0.10 (2013-10-01)
 -------------------
