--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.0.12 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.0.11 (2013-10-02)
 -------------------
 
