--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.0.12 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Allow setting ``title`` and ``alt`` attribute on image blocks (VIV-157).
 
 
 3.0.11 (2013-10-02)
