Back to development: 3.0.13

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.0.13 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.0.12 (2013-11-15)
 -------------------
 
