--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.1.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.1.0 (2014-01-07)
 ------------------
 
