--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.1.1 (unreleased)
 ------------------
 
-- Display "Canonical URL" field (VIV-270).
+- Display "Deeplink URL" field (VIV-270).
 
 
 3.1.0 (2014-01-07)
