--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.1.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.1.1 (2014-01-20)
 ------------------
 
