--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.1.3 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.1.2 (2014-02-10)
 ------------------
 
