--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,9 @@ zeit.content.article changes
 - Position cursor at the click position when entering editable mode
   (VIV-11795).
 
+- Make alt/title overridable in main article image too, not only in image
+  blocks in the body (VIV-305).
+
 
 3.1.3 (2014-02-18)
 ------------------
