--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.1.6 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.1.5 (2014-03-14)
 ------------------
 
