--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.1.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Display Google news keyword suggestions (VIV-359).
 
 
 3.1.5 (2014-03-14)
