--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.3.0 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix breaking editor on wysiwyg save after autosave.
 
 
 3.2.0 (2014-04-22)
@@ -348,7 +348,7 @@ zeit.content.article changes
 - Tests für Hashed-Resources angepasst.
 
 - CDS beim import weniger aggresiv (#5525).
-  
+
 - Nicht veröffentlichte CDS-Artikel werden jetzt in der Nacht gelöscht.
 
 2.0 (2009-06-08)
