--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add "SEO optimized" workflow checkbox (VIV-329).
 
 
 3.2.1 (2014-04-28)
