--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.3.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.3.0 (2014-05-09)
 ------------------
 
