--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Disable breaking news feature for the time being.
 
 
 3.3.0 (2014-05-09)
