Fixes VIV-338: Rewrite filenames to match the SEO expectations while typing
This is done in JavaScript since we'll need the same logic for breaking news,
where we need it while typing

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Add block for referencing an external Liveblog (WEB-246).
 
+- Rewrite filenames to match the SEO expectations while typing (VIV-338).
+
 
 3.3.1 (2014-05-13)
 ------------------
