--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ zeit.content.article changes
 3.3.2 (unreleased)
 ------------------
 
+- Reactivate breaking news feature.
+
 - Add block for referencing an external Liveblog (WEB-246).
 
 - Rewrite filenames to match the SEO expectations while typing (VIV-338).
