Fixes VIV-381: Register and cleanup keydown event handlers properly
This code was wrong from its beginning, since these handlers never were
unregistered, but it did not have any effect, since until VIV-11795
the whole content-editable was reloaded (thus the handlers were
destroyed along with it). But now we were seeing the unfortunate effects.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ zeit.content.article changes
 
 - Rewrite filenames to match the SEO expectations while typing (VIV-338).
 
+- Register and cleanup keydown event handlers properly (VIV-381).
+
 
 3.3.1 (2014-05-13)
 ------------------
