--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.4.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.4.0 (2014-06-03)
 ------------------
 
