--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Deactivate social media section until Facebook is implemented (VIV-387).
 
 
 3.4.0 (2014-06-03)
