--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Reactivate breaking news feature (again).
 
 
 3.4.2 (2014-06-04)
