--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.4.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix icon position in sprite (VIV-359, VIV-407)
 
 
 3.4.3 (2014-06-05)
