--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,8 +8,8 @@ zeit.content.article changes
 
 - Make Twitter and Facebook ressorts multi selectable (VIV-389).
 
-- Reactivate breaking news feature (again), make title character limit soft
-  (VIV-25).
+- Reactivate breaking news feature (again), make title character limit soft,
+  group checkboxes differently, add Twitter/Facebook (VIV-25).
 
 
 3.4.4 (2014-06-05)
