--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.4.6 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.4.5 (2014-06-20)
 ------------------
 
