--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.4.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Configure twitter/facebook main account for breaking news (VIV-416).
 
 
 3.4.5 (2014-06-20)
