Re VIV-409: Move JS filename normalization to zeit.cms

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,7 @@ zeit.content.article changes
 3.5.1 (unreleased)
 ------------------
 
-- Enable rewriting filenames for all content types; keep filename extenions
-  intact (VIV-409).
+- Move JS filename normalization to zeit.cms.
 
 - Move JS character counter to zeit.cms.
 
