--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.5.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.5.1 (2014-07-17)
 ------------------
 
