--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.5.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Reactivate posting breaking news to Facebook.
 
 
 3.5.2 (2014-07-30)
