--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.5.4 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.5.3 (2014-08-27)
 ------------------
 
