--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.5.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Send breaking news on a separate parse.com channel (VIV-466).
 
 
 3.5.3 (2014-08-27)
