--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.5.4 (unreleased)
 ------------------
 
-- Add Channel selection UI (VIV-469).
+- Add UI for Channel selection and lead candidate (VIV-469, VIV-463).
 
 - Add "push to mobile" to social media section, send breaking news on a
   separate parse.com channel (VIV-466).
