--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.6.1 (2014-09-03)
 ------------------
 
