--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix position of SEO workflow checkbox (VIV-484).
 
 
 3.6.1 (2014-09-03)
