--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Restrict access to auto-cp features to separate permission (VIV-525).
 
 
 3.6.2 (2014-09-18)
