Re VIV-405: Refresh landing zones after the editor has reloaded
This is the cleaned-up version of zeit.edit commit:90c5c92aa676.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ zeit.content.article changes
 
 - Set default channels for CDS articles (VIV-547).
 
+- Allow drag&drop of modules while in edit mode (VIV-405).
+
 
 3.6.4 (2014-10-21)
 ------------------
