--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,9 @@ zeit.content.article changes
 - When searching or replacing, ask to wrap around at end or beginning of text,
   resp. (VIV-10716).
 
+- Fix validation rule that checks for unpublished images, which broke due to
+  the introduction of reference objects for VIV-305.
+
 
 3.6.4 (2014-10-21)
 ------------------
