Back to development: 3.6.6

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.6 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.6.5 (2014-11-14)
 ------------------
 
