--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed saving control when replacing text in editor.
 
 
 3.6.5 (2014-11-14)
