Re VIV-618: Disable param validation, we don't have any parameters here

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ zeit.content.article changes
 
 - Fixed saving control when replacing text in editor.
 
+- Update to API changes in zeit.cms, zeit.edit.
+
 
 3.6.5 (2014-11-14)
 ------------------
