--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.7 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.6.6 (2014-12-17)
 ------------------
 
