--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Extract body traverser mechanics to zeit.edit.
 
 
 3.6.6 (2014-12-17)
