--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.12 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.6.11 (2015-03-13)
 -------------------
 
