--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.15 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.6.14 (2015-03-30)
 -------------------
 
