--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.15 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Add feature toggle ``zeit.push.social-form`` for social media form fields.
 
 
 3.6.14 (2015-03-30)
