--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.16 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Undo 3.6.15, it was a misunderstanding.
 
 
 3.6.15 (2015-04-15)
