Back to development: 3.6.17

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.17 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.6.16 (2015-04-15)
 -------------------
 
