Re DEV-745: Update CheckBoxWidget API

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.18 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Update CheckBoxWidget API (DEV-745).
 
 
 3.6.17 (2015-04-23)
