--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.21 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.6.20 (2015-05-18)
 -------------------
 
