re DEV-22: Display validation errors in Lightbox / Popup during publish.
- add interface to ArticleWorkflow to forward validation info to publish view
- adjust adapter for article workflow to use extended interface
- display warnings in template

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.6.21 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Display validation errors in Lightbox / Popup during publish. (DEV-22)
 
 
 3.6.20 (2015-05-18)
