--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.23 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.6.22 (2015-06-11)
 -------------------
 
