--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.24 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.6.23 (2015-06-23)
 -------------------
 
