--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.6.26 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 3.6.25 (2015-07-06)
 -------------------
 
