--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.7.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.7.0 (2015-07-24)
 ------------------
 
