--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ zeit.content.article changes
 3.7.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add block for referencing a "card stack" (DEV-892).
 
 
 3.7.0 (2015-07-24)
