--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 zeit.content.article changes
 ============================
 
+3.8.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 3.8.0 (2015-08-24)
 ------------------
 
